# toraheval

./: .gitignore  Q1-dataset.json  README.md  RFC-TorahEval.md  evaluators.py  langsmith_evaluation.py  pyproject.toml  targets.py
.github/workflows/: conventional-pr.yaml  ruff.yaml
dataset/: Q2-dataset.json  Q2-dataset.jsonl  convert_csv_to_json.py
servers/: README.md
servers/anthropic-python/: README.md  requirements.txt  server.py
src/torahbench/: __init__.py  _cli.py  discovery.py
targets/: __init__.py  anthropic_js_api_target.py  anthropic_targets.py  ituria_js_api_target.py  ituria_target.py  simple_target.py
targets/anthropic-js/: package-lock.json  package.json
targets/ituria-js/: package-lock.json  package.json  server.js
tests/: test_registry.py
tests/_cli/: test_eval_command.py  test_eval_command_functions.py
tests/integration/: test_cli.py
tests/monkeypatch/: test_file_recorder_logfile_patch.py
