[project]
name = "toraheval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.64.0",
    "langchain-anthropic>=0.3.19",
    "langsmith>=0.4.16",
    "openai>=1.101.0",
    "openevals>=0.1.0",
    "python-dotenv>=1.1.1",
]
